c2rust-transpile/tests/snapshots/snapshots__transpile@lift_const.c.2024.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/lift_const.2024.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
unsafe extern "C" {
    unsafe fn printf(format: *const ::core::ffi::c_char, ...) -> ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn lift_const(
    mut argc: ::core::ffi::c_int,
    mut argv: *mut *mut ::core::ffi::c_char,
) {
    unsafe {
        let mut starts_with_a: ::core::ffi::c_int = 0;
        if !(argc == 3 as ::core::ffi::c_int) {
            starts_with_a = (**argv.offset(0 as ::core::ffi::c_int as isize) as ::core::ffi::c_int
                == 'a' as i32) as ::core::ffi::c_int;
            if starts_with_a != 0 {
                printf(b"  (arg 0 starts with 'a')\n\0".as_ptr() as *const ::core::ffi::c_char);
            }
        }
        if argc == 3 as ::core::ffi::c_int {
            printf(b"  (argc was 3)\n\0".as_ptr() as *const ::core::ffi::c_char);
        }
    }
}
