c2rust-transpile/tests/snapshots/snapshots__transpile@loops.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/loops.rs
input_file: c2rust-transpile/tests/snapshots/loops.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn while_loop(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    while x != 0 {
        x += 1 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn for_loop(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    while i < 10 as ::core::ffi::c_int {
        x += 1 as ::core::ffi::c_int;
        i += 1;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn infinite_loop(mut x: ::core::ffi::c_int) {
    loop {
        x += 1 as ::core::ffi::c_int;
    }
}
#[no_mangle]
pub unsafe extern "C" fn goto_loop(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    loop {
        x += 1 as ::core::ffi::c_int;
        if !(x != 0) {
            break;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn do_while_loop(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    loop {
        x += 1 as ::core::ffi::c_int;
        if !(x != 0) {
            break;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn break_while(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    while x != 0 {
        if x != 0 {
            x += 1 as ::core::ffi::c_int;
            if x != 0 {
                break;
            }
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn continue_while(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    while x != 0 {
        if x != 0 {
            x += 1 as ::core::ffi::c_int;
            if x != 0 {
                continue;
            }
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn trivial_nested_while(mut x: ::core::ffi::c_int) {
    while x != 0 {
        while x != 0 {
            while x != 0 {
                x += 1 as ::core::ffi::c_int;
            }
        }
    }
}
#[no_mangle]
pub unsafe extern "C" fn nested_while(mut x: ::core::ffi::c_int) {
    while x != 0 {
        while x != 0 {
            while x != 0 {
                x += 1 as ::core::ffi::c_int;
            }
            x += 2 as ::core::ffi::c_int;
        }
        x += 3 as ::core::ffi::c_int;
    }
}
#[no_mangle]
pub unsafe extern "C" fn nested_for(mut x: ::core::ffi::c_int) {
    let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    while i < 5 as ::core::ffi::c_int {
        let mut j: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
        while j < 5 as ::core::ffi::c_int {
            x += 1;
            j += 1;
        }
        i += 1;
    }
}
#[no_mangle]
pub unsafe extern "C" fn exit_nested_loops(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    's_1: while x != 0 {
        while x != 0 {
            if x != 0 {
                break 's_1;
            }
            x += 1;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn continue_nested_loops(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    's_1: while x != 0 {
        while x != 0 {
            if x != 0 {
                continue 's_1;
            }
            x += 1;
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn break_and_continue_nested_loops(
    mut x: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    's_1: while x != 0 {
        while x != 0 {
            if x != 0 {
                break 's_1;
            }
            if x != 0 {
                continue 's_1;
            }
            x += 1;
        }
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn for_loop_single_continue(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block_0: u64;
    let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    while i < 10 as ::core::ffi::c_int {
        if x != 0 {
            if x != 0 {
                c2rust_current_block_0 = 792017965103506125;
            } else {
                c2rust_current_block_0 = 4644295000439058019;
            }
        } else {
            c2rust_current_block_0 = 4644295000439058019;
        }
        match c2rust_current_block_0 {
            4644295000439058019 => {
                x += 1 as ::core::ffi::c_int;
            }
            _ => {}
        }
        i += 1;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn for_loop_multi_continue(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block_1: u64;
    let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    while i < 10 as ::core::ffi::c_int {
        if x != 0 {
            if x != 0 {
                c2rust_current_block_1 = 792017965103506125;
            } else {
                c2rust_current_block_1 = 12675440807659640239;
            }
        } else {
            c2rust_current_block_1 = 12675440807659640239;
        }
        match c2rust_current_block_1 {
            12675440807659640239 => {
                x += 1 as ::core::ffi::c_int;
                if x != 0 {
                    if x != 0 {
                        c2rust_current_block_1 = 792017965103506125;
                    } else {
                        c2rust_current_block_1 = 15427931788582360902;
                    }
                } else {
                    c2rust_current_block_1 = 15427931788582360902;
                }
                match c2rust_current_block_1 {
                    792017965103506125 => {}
                    _ => {
                        x += 2 as ::core::ffi::c_int;
                    }
                }
            }
            _ => {}
        }
        i += 1;
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn do_loop_single_continue(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block_0: u64;
    loop {
        if x != 0 {
            if x != 0 {
                c2rust_current_block_0 = 18088007599891946824;
            } else {
                c2rust_current_block_0 = 12517898123489920830;
            }
        } else {
            c2rust_current_block_0 = 12517898123489920830;
        }
        match c2rust_current_block_0 {
            12517898123489920830 => {
                x += 1 as ::core::ffi::c_int;
            }
            _ => {}
        }
        if !(x != 0) {
            break;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn do_loop_multi_continue(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block_1: u64;
    loop {
        if x != 0 {
            if x != 0 {
                c2rust_current_block_1 = 18088007599891946824;
            } else {
                c2rust_current_block_1 = 4988723283678924448;
            }
        } else {
            c2rust_current_block_1 = 4988723283678924448;
        }
        match c2rust_current_block_1 {
            4988723283678924448 => {
                x += 1 as ::core::ffi::c_int;
                if x != 0 {
                    if x != 0 {
                        c2rust_current_block_1 = 18088007599891946824;
                    } else {
                        c2rust_current_block_1 = 7502529970979898288;
                    }
                } else {
                    c2rust_current_block_1 = 7502529970979898288;
                }
                match c2rust_current_block_1 {
                    18088007599891946824 => {}
                    _ => {
                        x += 2 as ::core::ffi::c_int;
                    }
                }
            }
            _ => {}
        }
        if !(x != 0) {
            break;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn explicit_loop_multi_exit(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    loop {
        match x {
            1 => {
                x += 1 as ::core::ffi::c_int;
            }
            2 => {
                x += 2 as ::core::ffi::c_int;
                if x != 0 {
                    x += 3 as ::core::ffi::c_int;
                } else {
                    x += 4 as ::core::ffi::c_int;
                }
                x += 5 as ::core::ffi::c_int;
                break;
            }
            _ => {
                x += 6 as ::core::ffi::c_int;
                break;
            }
        }
    }
    x += 4 as ::core::ffi::c_int;
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn implicit_loop_multi_exit(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    loop {
        match x {
            1 => {
                x += 1 as ::core::ffi::c_int;
            }
            2 => {
                x += 2 as ::core::ffi::c_int;
                if x != 0 {
                    x += 3 as ::core::ffi::c_int;
                } else {
                    x += 4 as ::core::ffi::c_int;
                }
                x += 5 as ::core::ffi::c_int;
                break;
            }
            _ => {
                x += 6 as ::core::ffi::c_int;
                break;
            }
        }
    }
    x += 4 as ::core::ffi::c_int;
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn loop_returns(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    while x != 0 {
        x += 1 as ::core::ffi::c_int;
        if x != 0 {
            x += 2 as ::core::ffi::c_int;
            return x;
        }
        x += 3 as ::core::ffi::c_int;
        if x != 0 {
            x += 4 as ::core::ffi::c_int;
            return x;
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn loop_gotos(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block: u64;
    loop {
        if !(x != 0) {
            c2rust_current_block = 11006700562992250127;
            break;
        }
        x += 1 as ::core::ffi::c_int;
        if x != 0 {
            x += 2 as ::core::ffi::c_int;
            c2rust_current_block = 18208003724056061397;
            break;
        } else {
            x += 3 as ::core::ffi::c_int;
            if x != 0 {
                x += 4 as ::core::ffi::c_int;
                c2rust_current_block = 18208003724056061397;
                break;
            } else {
                x += 5 as ::core::ffi::c_int;
            }
        }
    }
    match c2rust_current_block {
        18208003724056061397 => return -x,
        _ => return x,
    };
}
#[no_mangle]
pub unsafe extern "C" fn loop_early_return(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    while x != 0 {
        x += 1 as ::core::ffi::c_int;
        if x != 0 {
            x += 2 as ::core::ffi::c_int;
            return x;
        }
    }
    return -x;
}
#[no_mangle]
pub unsafe extern "C" fn if_else_loops(mut x: ::core::ffi::c_int) {
    if x != 0 {
        while x != 0 {
            x += 1 as ::core::ffi::c_int;
        }
    } else {
        while x != 0 {
            x += 2 as ::core::ffi::c_int;
        }
    };
}
#[no_mangle]
pub unsafe extern "C" fn goto_loops(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut c2rust_current_block: u64;
    if x != 0 {
        c2rust_current_block = 7699282067288334629;
    } else {
        c2rust_current_block = 214121115656568262;
    }
    loop {
        match c2rust_current_block {
            7699282067288334629 => {
                x += 1 as ::core::ffi::c_int;
                if x != 0 {
                    c2rust_current_block = 7699282067288334629;
                } else {
                    break;
                }
            }
            _ => {
                x += 2 as ::core::ffi::c_int;
                if x != 0 {
                    c2rust_current_block = 214121115656568262;
                } else {
                    break;
                }
            }
        }
    }
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn goto_into_loops(mut x: ::core::ffi::c_int) {
    let mut c2rust_current_block: u64;
    if x != 0 {
        c2rust_current_block = 12352858790245325121;
    } else {
        c2rust_current_block = 9583393612731269253;
    }
    loop {
        match c2rust_current_block {
            12352858790245325121 => {
                x += 1 as ::core::ffi::c_int;
                if x != 0 {
                    c2rust_current_block = 12352858790245325121;
                } else {
                    break;
                }
            }
            _ => {
                x += 2 as ::core::ffi::c_int;
                if x != 0 {
                    c2rust_current_block = 9583393612731269253;
                } else {
                    break;
                }
            }
        }
    }
}
#[no_mangle]
pub unsafe extern "C" fn goto_separate_loops(mut x: ::core::ffi::c_int) {
    if x != 0 {
        loop {
            x += 1 as ::core::ffi::c_int;
            if !(x != 0) {
                break;
            }
        }
    } else {
        loop {
            x += 2 as ::core::ffi::c_int;
            if !(x != 0) {
                break;
            }
        }
    };
}
