c2rust-transpile/tests/snapshots/snapshots__transpile@macro_fns.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/macro_fns.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
pub const LIT_PAREN: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
pub const CONST_PAREN: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn basic() {
    let mut lit_id: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut lit_paren: ::core::ffi::c_int = LIT_PAREN;
    let mut const_id: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut const_paren: ::core::ffi::c_int = CONST_PAREN;
    let mut id_with_lit: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut paren_with_lit: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut id_with_const: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut paren_with_const: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut nested_id_with_lit: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut nested_paren_with_lit: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut nested_id_with_const: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut nested_paren_with_const: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
}
