c2rust-transpile/tests/snapshots/snapshots__transpile@macrocase.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/macrocase.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct ZSTD_dParameter(pub ::core::ffi::c_uint);
impl ZSTD_dParameter {
    pub const ZSTD_d_windowLogMax: Self = Self(100);
    pub const ZSTD_d_experimentalParam1: Self = Self(1000);
}
pub const ZSTD_d_format: ::core::ffi::c_uint = 1000 as ::core::ffi::c_uint;
#[no_mangle]
pub unsafe extern "C" fn ZSTD_dParam_getBounds(mut dParam: ZSTD_dParameter) -> ::core::ffi::c_int {
    let mut bounds: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    match dParam.0 {
        100 => {
            bounds = 1 as ::core::ffi::c_int;
            return bounds;
        }
        ZSTD_d_format => {
            bounds = 5 as ::core::ffi::c_int;
            return bounds;
        }
        _ => {}
    }
    return bounds;
}
