c2rust-transpile/tests/snapshots/snapshots__transpile@macrocase.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/macrocase.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#[derive(Clone, Copy)]
#[repr(transparent)]
pub struct ZSTD_dParameter(pub ::core::ffi::c_uint);
pub const ZSTD_d_experimentalParam1: ZSTD_dParameter = ZSTD_dParameter(1000);
pub const ZSTD_d_windowLogMax: ZSTD_dParameter = ZSTD_dParameter(100);
pub const ZSTD_d_format: ::core::ffi::c_uint = 1000 as ::core::ffi::c_uint;
#[no_mangle]
pub unsafe extern "C" fn ZSTD_dParam_getBounds(mut dParam: ZSTD_dParameter) -> ::core::ffi::c_int {
    unsafe {
        let mut bounds: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
        match dParam.0 as ::core::ffi::c_uint {
            100 => {
                bounds = 1 as ::core::ffi::c_int;
                return bounds;
            }
            1000 => {
                bounds = 5 as ::core::ffi::c_int;
                return bounds;
            }
            _ => {}
        }
        return bounds;
    }
}
